# dbconf/swagger3.yaml
@@ -193,6 +193,96 @@ paths:
           description: "client not found"
 
 
+
+
+
+  /service:
+    get:
+      tags:
+        - "service"
+      summary: Returns all service.
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: query
+          name: _id
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#'
+  /service/single:
+    post:
+      tags:
+        - "service"
+      summary: "Add service in the store with form data"
+      description: ""
+      operationId: "updatePetWithForm"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "service object add"
+          required: true
+          schema:
+            $ref: "#/definitions/Service"
+      responses:
+        405:
+          description: "Invalid input"
+    put:
+      tags:
+        - "service"
+      summary: "Updated service"
+      description: "This can only be done by the logged in service."
+      operationId: "updateclient"
+      produces:
+        - "application/json"
+      consumes:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "query"
+          description: "service"
+          required: true
+          type: "string"
+        - in: "body"
+          name: "body"
+          description: "client object put"
+          required: true
+          schema:
+            $ref: "#/definitions/Service"
+      responses:
+        400:
+          description: "Invalid client supplied"
+        404:
+          description: "service not found"
+    delete:
+      tags:
+        - "service"
+      summary: "Deletes a service"
+      description: ""
+      operationId: "delete service"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "query"
+          description: "delete - service - id"
+          required: true
+          type: "string"
+      responses:
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "client not found"
+
+
+
   /admin/login:
     post:
       tags:
@@ -393,6 +483,18 @@ definitions:
       phone:
         type: "string"
         required: true
+  Service:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+        required: true
+      minPrice:
+        type: "integer"
+        format: "int32"
+      maxPrice:
+        type: "integer"
+        format: "int32"
 
 
 
